// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserCard matches snapshot with admin user 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderBottomWidth": 1,
      "borderColor": "#E0E0E0",
      "marginBottom": 8,
      "marginHorizontal": 16,
      "paddingLeft": 0,
      "paddingVertical": 16,
    }
  }
>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#e8f2fb",
            "borderRadius": 14,
            "height": 50,
            "justifyContent": "center",
            "marginRight": 16,
            "width": 50,
          }
        }
      >
        <Text
          style={
            {
              "color": "#0171ce",
              "fontSize": 16,
              "fontWeight": "700",
              "marginBottom": 4,
            }
          }
        >
          JD
        </Text>
      </View>
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          style={
            {
              "color": "#2C3E50",
              "fontSize": 14,
              "fontWeight": "bold",
              "marginBottom": 4,
            }
          }
        >
          John Doe
        </Text>
        <Text
          style={
            {
              "color": "#7F8C8D",
              "fontSize": 14,
              "fontWeight": "600",
            }
          }
        >
          Admin
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "flexDirection": "row",
          "gap": 10,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#e8f2fb",
            "borderColor": "#0171ce",
            "borderRadius": 18,
            "borderWidth": 1,
            "height": 30,
            "justifyContent": "center",
            "opacity": 1,
            "width": 30,
          }
        }
        testID="usercard-edit"
      >
        <Icon
          color="#0171ce"
          name="edit"
          size={18}
        />
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FDEDED",
            "borderColor": "#E74C3C",
            "borderRadius": 18,
            "borderWidth": 1,
            "height": 30,
            "justifyContent": "center",
            "opacity": 1,
            "width": 30,
          }
        }
        testID="usercard-delete"
      >
        <Icon
          color="#E74C3C"
          name="delete"
          size={18}
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`UserCard matches snapshot with manager user 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderBottomWidth": 1,
      "borderColor": "#E0E0E0",
      "marginBottom": 8,
      "marginHorizontal": 16,
      "paddingLeft": 0,
      "paddingVertical": 16,
    }
  }
>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#e8f2fb",
            "borderRadius": 14,
            "height": 50,
            "justifyContent": "center",
            "marginRight": 16,
            "width": 50,
          }
        }
      >
        <Text
          style={
            {
              "color": "#0171ce",
              "fontSize": 16,
              "fontWeight": "700",
              "marginBottom": 4,
            }
          }
        >
          JD
        </Text>
      </View>
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          style={
            {
              "color": "#2C3E50",
              "fontSize": 14,
              "fontWeight": "bold",
              "marginBottom": 4,
            }
          }
        >
          John Doe
        </Text>
        <Text
          style={
            {
              "color": "#7F8C8D",
              "fontSize": 14,
              "fontWeight": "600",
            }
          }
        >
          Manager
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "flexDirection": "row",
          "gap": 10,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#e8f2fb",
            "borderColor": "#0171ce",
            "borderRadius": 18,
            "borderWidth": 1,
            "height": 30,
            "justifyContent": "center",
            "opacity": 1,
            "width": 30,
          }
        }
        testID="usercard-edit"
      >
        <Icon
          color="#0171ce"
          name="edit"
          size={18}
        />
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#FDEDED",
            "borderColor": "#E74C3C",
            "borderRadius": 18,
            "borderWidth": 1,
            "height": 30,
            "justifyContent": "center",
            "opacity": 1,
            "width": 30,
          }
        }
        testID="usercard-delete"
      >
        <Icon
          color="#E74C3C"
          name="delete"
          size={18}
        />
      </View>
    </View>
  </View>
</View>
`;
